# nano_res

./: .gitignore  .pylintrc  README.md  dist.py  nano_res.code-workspace  nano_res.h  nr_gen.py  scaffold.txt
.github/workflows/: pylint.yml
integration_examples/: CMakeLists.txt  Makefile  meson.build
integration_examples/.scripts/: nr_gen_aio.py
integration_examples/resources/: hello.txt
integration_examples/src/: main.cpp
